--- a/.env
+++ b/.env
@@ -4,4 +4,4 @@ VUE_APP_BASE_API = '/api/v1'
 
 # target host
 
-#VUE_TARGET_HOST = 'http://localhost:8080'
+VUE_TARGET_HOST = 'http://192.168.0.196:8001'
