--- a/.env
+++ b/.env
@@ -4,4 +4,5 @@ VUE_APP_BASE_API = '/api/v1'
 
 # target host
 
-VUE_TARGET_HOST = 'http://192.168.0.196:8001'
+VUE_TARGET_HOST = 'http://192.168.0.100:8001'
+#VUE_TARGET_HOST = 'http://192.168.0.106:8080'
