--- a/package.json
+++ b/package.json
@@ -37,6 +37,15 @@
     "eslint-plugin-vue": "^6.2.2",
     "typescript": "~3.9.3",
     "vue-template-compiler": "^2.6.11",
+    "highlight.js": "^9.15.6",
+    "markdown-it": "10.0.0",
+    "markdown-it-deflist": "^2.0.3",
+    "markdown-it-footnote": "^3.0.1",
+    "markdown-it-implicit-figures": "^0.9.0",
+    "markdown-it-imsize": "^2.0.1",
+    "markdown-it-katex": "^2.0.3",
+    "markdown-it-ruby": "^0.1.1",
+    "markdown-it-table-of-contents": "^0.4.4",
     "node-sass": "^5.0.0",
     "sass-loader": "^10.1.0"
   }
