--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "vue-cli-service serve --fix",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "eslint --ext .js,.vue src --fix"
   },
   "dependencies": {
     "axios": "^0.21.0",
@@ -21,24 +21,22 @@
     "xss": "^1.0.6"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^2.33.0",
-    "@typescript-eslint/parser": "^2.33.0",
+    "@typescript-eslint/eslint-plugin": "^4.9.0",
+    "@typescript-eslint/parser": "^4.9.0",
     "@vue/cli-plugin-babel": "~4.5.0",
-    "@vue/cli-plugin-eslint": "~4.5.0",
     "@vue/cli-plugin-router": "~4.5.0",
     "@vue/cli-plugin-typescript": "~4.5.0",
     "@vue/cli-plugin-vuex": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
-    "@vue/eslint-config-standard": "^5.1.2",
-    "@vue/eslint-config-typescript": "^5.0.2",
-    "eslint": "^6.7.2",
-    "eslint-plugin-import": "^2.20.2",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-standard": "^4.0.0",
-    "eslint-plugin-vue": "^6.2.2",
-    "typescript": "~3.9.3",
-    "vue-template-compiler": "^2.6.11",
+    "babel-eslint": "10.1.0",
+    "eslint": "7.13.0",
+    "eslint-config-prettier": "^6.15.0",
+    "eslint-friendly-formatter": "4.0.1",
+    "eslint-plugin-import": "2.22.1",
+    "eslint-plugin-node": "11.1.0",
+    "eslint-plugin-prettier": "^3.2.0",
+    "eslint-plugin-promise": "4.2.1",
+    "eslint-plugin-vue": "7.1.0",
     "highlight.js": "^9.15.6",
     "markdown-it": "10.0.0",
     "markdown-it-deflist": "^2.0.3",
@@ -49,6 +47,9 @@
     "markdown-it-ruby": "^0.1.1",
     "markdown-it-table-of-contents": "^0.4.4",
     "node-sass": "^5.0.0",
-    "sass-loader": "^10.1.0"
+    "prettier": "^2.2.1",
+    "sass-loader": "^10.1.0",
+    "typescript": "~3.9.3",
+    "vue-template-compiler": "^2.6.11"
   }
 }
