--- a/package.json
+++ b/package.json
@@ -11,13 +11,14 @@
     "axios": "^0.21.0",
     "core-js": "^3.6.5",
     "element-ui": "^2.14.1",
+    "js-base64": "3.5.2",
+    "nprogress": "^0.2.0",
     "vue": "^2.6.11",
     "vue-class-component": "^7.2.3",
     "vue-i18n": "^8.22.2",
     "vue-property-decorator": "^8.4.2",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0",
-    "js-base64": "3.5.2",
     "xss": "^1.0.6"
   },
   "devDependencies": {
