--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "vue-property-decorator": "^8.4.2",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0",
+    "vuex-class": "^0.3.2",
     "xss": "^1.0.6"
   },
   "devDependencies": {
