--- a/nginx.conf
+++ b/nginx.conf
@@ -26,6 +26,14 @@
              index index.html index.htm;   #添加属性。
          }
 
+           location /api/ {
+             proxy_pass http://lingzhi-api-svc:80/api/;
+           }
+
+           location /upload/ {
+             proxy_pass http://lingzhi-api-svc:80/upload/;
+           }
+
          location = /50x.html {
              root   /usr/share/nginx/html;
          }
