fix:nginx add try files

--- a/nginx.conf
+++ b/nginx.conf
@@ -24,6 +24,7 @@
          location / {
              root /usr/share/nginx/html;   #站点目录
              index index.html index.htm;   #添加属性。
+             try_files $uri $uri/ /index.html;
          }
 
            location /api/ {
