fix:nginx  server name

--- a/nginx.conf
+++ b/nginx.conf
@@ -20,7 +20,7 @@
 
      server {
          listen  80;
-         server_name localhost;
+         server_name iast.huoxian.cn;
          location / {
              root /usr/share/nginx/html;   #站点目录
              index index.html index.htm;   #添加属性。
