--- a/nginx.conf
+++ b/nginx.conf
@@ -21,6 +21,7 @@
      server {
          listen  80;
          server_name iast.huoxian.cn;
+         client_max_body_size 100M;
          location / {
              root /usr/share/nginx/html;   #站点目录
              index index.html index.htm;   #添加属性。
