--- a/.drone.yml
+++ b/.drone.yml
@@ -117,6 +117,23 @@ steps:
       branch:
         - master
 
+  # 部署saas.prod环境
+  - name: deliver-iast-saas-web-prod
+    image: sinlead/drone-kubectl
+    settings:
+      kubernetes_server:
+        from_secret: iast_eks_prod_server
+      kubernetes_cert:
+        from_secret: iast_eks_prod_cert
+      kubernetes_token:
+        from_secret: iast_eks_prod_token
+    commands:
+      - find deploy/deploy-eks-iast-saas-prod.yml -type f -exec sed -i 's/VERSION/0.1.${DRONE_BUILD_NUMBER}/g' {} \;
+      - ls deploy/deploy-eks-iast-saas-prod.yml | xargs -I {} kubectl apply -f {}
+    when:
+      branch:
+        - saas.master
+
   # 结束通知
   - name: notify-end
     image: plugins/webhook
@@ -143,7 +160,6 @@ trigger:
   branch:
     - master
     - saas.master
-  #    - test
   event:
     - push
     - tag
