--- a/nginx.conf
+++ b/nginx.conf
@@ -20,7 +20,7 @@
 
      server {
          listen  80;
-         server_name iast.huoxian.cn iast-saas.huoxian.cn;
+         server_name iast.huoxian.cn iast-saas.huoxian.cn *.cn-north-1.elb.amazonaws.com.cn;
          client_max_body_size 100M;
          location / {
              root /usr/share/nginx/html;   #站点目录
