优化：增加agent删除、增加策略自动选中等

--- a/.env
+++ b/.env
@@ -4,6 +4,7 @@ VUE_APP_BASE_API = '/api/v1'
 
 # target host
 
-VUE_TARGET_HOST = 'http://127.0.0.1:8001'
+#VUE_TARGET_HOST = 'http://127.0.0.1:8001'
+VUE_TARGET_HOST = 'http://aws.iast.huoxian.cn:8000'
 #VUE_TARGET_HOST = 'http://192.168.0.106:8080'
 #VUE_TARGET_HOST = 'http://192.168.0.181:8080'
