--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "core-js": "^3.6.5",
     "echarts": "^5.0.0",
     "element-ui": "^2.14.1",
-    "js-base64": "3.5.2",
+    "js-base64": "^3.5.2",
     "nprogress": "^0.2.0",
     "vue": "^2.6.11",
     "vue-class-component": "^7.2.3",
