--- a/.drone.yml
+++ b/.drone.yml
@@ -34,6 +34,8 @@ steps:
   - name: npm-install
     image: node:12
     commands:
+      - npm config get registry
+      - npm config set registry https://registry.npm.taobao.org
       - npm config set cache ./.npm-cache --global
       - npm install
   # 构建dist
