--- a/nginx.conf
+++ b/nginx.conf
@@ -29,6 +29,7 @@
          }
 
            location /api/ {
+             proxy_read_timeout 60;
              proxy_pass http://lingzhi-api-svc:80/api/;
            }
 
