--- a/.github/workflows/build-web.yml
+++ b/.github/workflows/build-web.yml
@@ -16,11 +16,15 @@ jobs:
         node-version: [10.x, 12.x, 14.x, 15.x]
 
     steps:
-      - name: Use Node.js ${{ matrix.node-version }}
+      - name: checkout
       - uses: actions/checkout@v2
+
+      - name: setup nodejs
         uses: actions/setup-node@v1
         with:
           node-version: ${{ matrix.node-version }}
+      
+      - name: test and build
       - run: npm ci
-      - run: npm run build --if-present
       - run: npm test
+      - run: npm run build --if-present
