--- a/.env
+++ b/.env
@@ -3,6 +3,6 @@
 VUE_APP_BASE_API = '/api/v1'
 
 # target host
-VUE_TARGET_HOST = 'http://127.0.0.1:8001'
-#VUE_TARGET_HOST = 'http://aws.iast.huoxian.cn:8000'
+#VUE_TARGET_HOST = 'http://127.0.0.1:8001'
+VUE_TARGET_HOST = 'http://iast.huoxian.cn:8000'
 #VUE_TARGET_HOST = 'http://iast.huoxian.cn'
