--- a/.github/workflows/deploy-web-to-aws.yml
+++ b/.github/workflows/deploy-web-to-aws.yml
@@ -1,8 +1,8 @@
 name: Build DongTai-Web
 
 on:
-  push:
-    branches: [ develop ]
+  pull_request:
+    branches: [ main ]
 
 jobs:
   build:
@@ -31,7 +31,39 @@ jobs:
           npm test
           npm run build --if-present
       
+      - name: Checkout
+        uses: actions/checkout@v2
 
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v1
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+
+      - name: Login to DockerHub
+        uses: docker/login-action@v1
+        with:
+          registry: ${{ aliyun_dockerhub_registry }}
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+
+      - name: Build and push
+        uses: docker/build-push-action@v2
+        with:
+          context: .
+          push: true
+          tags: "registry.cn-beijing.aliyuncs.com/secnium/iast-saas-web:latest,registry.cn-beijing.aliyuncs.com/secnium/iast-saas-web:1.0.${{github.run_number}}"
+
+      - uses: actions/checkout@master
+      - name: deploy to cluster
+        uses: wahyd4/kubectl-helm-action@master
+        env:
+          KUBE_CONFIG_DATA: ${{ secrets.KUBE_CONFIG_DATA }}
+        with:
+          args: |
+            find deploy/deploy-eks-iast-saas-web-prod.yml -type f -exec sed -i 's/VERSION/1.0.${DRONE_BUILD_NUMBER}/g' {} \;
+            ls deploy/deploy-eks-iast-saas-web-prod.yml | xargs -I {} kubectl apply -f {}
+      
       - name: finish build
         uses: joelwmale/webhook-action@master
         with:
