--- a/nginx.conf
+++ b/nginx.conf
@@ -30,11 +30,11 @@
 
            location /api/ {
              proxy_read_timeout 60;
-             proxy_pass http://lingzhi-webapi:8000/api/;
+             proxy_pass http://lingzhi-api-svc:80/api/;
            }
 
            location /upload/ {
-             proxy_pass http://lingzhi-webapi:8000/upload/;
+             proxy_pass http://lingzhi-api-svc:80/upload/;
            }
 
          location = /50x.html {
