增加调用方法 开发模式调用路径协议修改为https

--- a/.env
+++ b/.env
@@ -4,5 +4,5 @@ VUE_APP_BASE_API = '/api/v1'
 
 # target host
 #VUE_TARGET_HOST = 'http://127.0.0.1:8001'
-VUE_TARGET_HOST = 'http://iast.huoxian.cn:8000'
+VUE_TARGET_HOST = 'https://iast.huoxian.cn:8001'
 #VUE_TARGET_HOST = 'http://iast.huoxian.cn'
