--- a/.env
+++ b/.env
@@ -1,8 +1,11 @@
 
 # base api
 VUE_APP_BASE_API = '/api/v1'
+VUE_APP_ATOM_API = '/atom-webapi'
 
 # target host
 #VUE_TARGET_HOST = 'http://127.0.0.1:8001'
 VUE_TARGET_HOST = 'https://iast.huoxian.cn:8001'
 #VUE_TARGET_HOST = 'http://iast.huoxian.cn'
+
+VUE_ATOM_TARGET_HOST = 'https://192.168.0.126'
