--- a/.github/workflows/deploy-web-to-aws_test.yml
+++ b/.github/workflows/deploy-web-to-aws_test.yml
@@ -3,6 +3,8 @@ name: Deploy DongTai-Web to AWS Test
 on:
   pull_request:
     branches: [ develop ]
+  push:
+    branches: [ develop ]
 
 jobs:
   build:
@@ -49,7 +51,7 @@ jobs:
         with:
           context: .
           push: true
-          tags: "registry.cn-beijing.aliyuncs.com/secnium/iast-saas-web-test:latest,registry.cn-beijing.aliyuncs.com/secnium/iast-saas-web-test:1.0.${{github.run_number}},registry.cn-beijing.aliyuncs.com/huoxian_pub/dongtai-web-test:latest"
+          tags: "registry.cn-beijing.aliyuncs.com/secnium/iast-saas-web-test:latest,registry.cn-beijing.aliyuncs.com/secnium/iast-saas-web-test:1.0.${{github.run_number}},"
 
       - uses: actions/checkout@master
       - name: deploy to cluster
