--- a/deploy/deploy-eks-iast-saas-web-test.yml
+++ b/deploy/deploy-eks-iast-saas-web-test.yml
@@ -31,7 +31,14 @@ spec:
               memory: 1000Mi
       imagePullSecrets:
         - name: aliyun-registry-secret
-
+---
+apiVersion: v1
+kind: Service
+metadata:
+  labels:
+    app: dongtai-web
+  name: dongtai-web-pub-svc
+  namespace: iast-test
 spec:
   ports:
   - port: 8081
