fixbug:VulnList下滑加载更多操作被关闭后无法再次打开的问题

--- a/nginx.conf
+++ b/nginx.conf
@@ -1,4 +1,4 @@
- #user  nobody;
+#user  nobody;
  worker_processes  1;
  events {
      worker_connections  1024;
@@ -30,11 +30,11 @@
 
            location /api/ {
              proxy_read_timeout 60;
-             proxy_pass http://lingzhi-api-svc:80/api/;
+             proxy_pass http://dongtai-webapi-svc:80/api/;
            }
 
            location /upload/ {
-             proxy_pass http://lingzhi-api-svc:80/upload/;
+             proxy_pass http://dongtai-webapi-svc:80/upload/;
            }
 
          location = /50x.html {
