--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0",
     "vuex-class": "^0.3.2",
+    "webpack-merge": "^5.8.0",
     "xss": "^1.0.6"
   },
   "devDependencies": {
