--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "nprogress": "^0.2.0",
     "vue": "^2.6.11",
     "vue-class-component": "^7.2.3",
+    "vue-clipboard2": "^0.3.1",
     "vue-i18n": "^8.22.2",
     "vue-property-decorator": "^8.4.2",
     "vue-router": "^3.2.0",
