--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "echarts": "^5.0.0",
     "element-ui": "^2.14.1",
     "js-base64": "^3.5.2",
+    "markdown-it-xss": "^1.0.2",
     "nprogress": "^0.2.0",
     "vue": "^2.6.11",
     "vue-class-component": "^7.2.3",
     "vue-clipboard2": "^0.3.1",
+    "vue-dompurify-html": "^2.3.0",
     "vue-i18n": "^8.22.2",
     "vue-property-decorator": "^8.4.2",
     "vue-router": "^3.2.0",
