--- a/.github/workflows/deploy-web-to-aws_test.yml
+++ b/.github/workflows/deploy-web-to-aws_test.yml
@@ -42,6 +42,7 @@ jobs:
         run: |
           npm ci
           npm test
+          npm i
           npm run build --if-present
 
       - name: Build and push
