--- a/nginx.conf
+++ b/nginx.conf
@@ -45,4 +45,13 @@ http {
             root   /usr/share/nginx/html;
         }
     }
+      server {
+        listen 80;
+        server_name test.demo.iast.huoxian.cn;
+        location /demo.html {
+                 proxy_set_header X-real-ip $remote_addr;
+                proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+                proxy_pass http://dongtai-webapi-svc:80/api/v1/demo;
+        }
+    } 
 }
