--- a/nginx.conf
+++ b/nginx.conf
@@ -47,7 +47,7 @@ http {
     }
       server {
         listen 80;
-        server_name test.demo.iast.huoxian.cn;
+        server_name demo.test.iast.huoxian.cn;
         location /demo.html {
                  proxy_set_header X-real-ip $remote_addr;
                 proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
