update:add pull_request to release_base_image.yaml

--- a/.github/workflows/deploy-web-to-release.yml
+++ b/.github/workflows/deploy-web-to-release.yml
@@ -3,6 +3,8 @@ name: Deploy DongTai-Web to Release
 on:
   push:
     branches: [ "release-*" ]
+  pull_request:
+    branches: [ "release-*" ]
 
 jobs:
   build:
