feature:Routing asynchronous dynamic

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@antv/g6": "^4.1.11",
     "axios": "^0.21.0",
+    "cookies-js": "^1.2.3",
     "core-js": "^3.6.5",
     "echarts": "^5.0.0",
     "element-ui": "^2.14.1",
