--- a/nginx.conf
+++ b/nginx.conf
@@ -45,13 +45,13 @@ http {
             root   /usr/share/nginx/html;
         }
     }
-      server {
+    server {
         listen 80;
-        server_name demo.test.iast.huoxian.cn;
+        server_name iast-demo.huoxian.cn;
         location /{
             proxy_set_header X-real-ip $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_pass http://dongtai-webapi-svc:80/api/v1/demo;
         }
-    } 
+    }
 }
