--- a/nginx.conf
+++ b/nginx.conf
@@ -31,6 +31,8 @@ http {
     location /api/ {
             proxy_set_header X-real-ip $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header User-Agent $http_user_agent;
+            proxy_set_header X-Host $http_host;
             proxy_read_timeout 60;
             proxy_pass http://dongtai-webapi-svc:80/api/;
         }
