fix:HXSecurity/DongTai#243

--- a/.env
+++ b/.env
@@ -5,7 +5,7 @@ VUE_APP_ATOM_API = '/atom-webapi'
 
 # target host
 #VUE_TARGET_HOST = 'http://192.168.2.127:8000'
-VUE_TARGET_HOST = 'https://test.iast.io'
+VUE_TARGET_HOST = 'https://iast-test.huoxian.cn'
 #VUE_TARGET_HOST = 'http://iast.huoxian.cn'
 
 VUE_ATOM_TARGET_HOST = 'https://192.168.0.126'
