--- a/.github/workflows/deploy-web-to-release.yml
+++ b/.github/workflows/deploy-web-to-release.yml
@@ -33,12 +33,19 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
 
-      - name: Login to DockerHub
+      - name: Login to AliyunRegistry
         uses: docker/login-action@v1
         with:
           registry: ${{ secrets.ALIYUN_REGISTRY }}
           username: ${{ secrets.ALIYUN_DOCKERHUB_USER }}
           password: ${{ secrets.ALIYUN_DOCKERHUB_PASSWORD }}
+
+      - name: Login to DockerHub
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DONGTAI_DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DONGTAI_DOCKERHUB_TOKEN }}
+
 
       - name: test and build
         run: |
@@ -56,7 +63,11 @@ jobs:
         with:
           context: .
           push: true
-          tags: "registry.cn-beijing.aliyuncs.com/huoxian_pub/dongtai-web:${{ steps.release.outputs.version }}"
+          tags: | 
+            registry.cn-beijing.aliyuncs.com/huoxian_pub/dongtai-web:${{ steps.release.outputs.version }}
+            registry.cn-beijing.aliyuncs.com/huoxian_pub/dongtai-web:latest
+            dongtai/dongtai-web:${{ steps.release.outputs.version }}
+            dongtai/dongtai-web:latest
 
       - name: finish build
         uses: joelwmale/webhook-action@master
