--- a/.github/workflows/deploy-web-to-aws.yml
+++ b/.github/workflows/deploy-web-to-aws.yml
@@ -50,7 +50,9 @@ jobs:
         with:
           context: .
           push: true
-          tags: "registry.cn-beijing.aliyuncs.com/secnium/iast-saas-web:latest,registry.cn-beijing.aliyuncs.com/secnium/iast-saas-web:1.0.${{github.run_number}},registry.cn-beijing.aliyuncs.com/huoxian_pub/dongtai-web:latest"
+          tags: |
+            registry.cn-beijing.aliyuncs.com/secnium/iast-saas-web:latest
+            registry.cn-beijing.aliyuncs.com/secnium/iast-saas-web:1.0.${{github.run_number}}
 
       - uses: actions/checkout@master
       - name: deploy to cluster
@@ -59,8 +61,8 @@ jobs:
           KUBE_CONFIG_DATA: ${{ secrets.KUBE_CONFIG_DATA }}
         with:
           args: |
-            find deploy/deploy-eks-iast-saas-web-prod.yml -type f -exec sed -i 's/VERSION/1.0.${{github.run_number}}/g' {} \;
-            ls deploy/deploy-eks-iast-saas-web-prod.yml | xargs -I {} kubectl apply -f {}
+            find deploy/deploy-eks-iast-saas-web-test.yml -type f -exec sed -i 's/VERSION/1.0.${{github.run_number}}/g' {} \;
+            ls deploy/deploy-eks-iast-saas-web-test.yml | xargs -I {} kubectl apply -f {}
       
       - name: finish build
         uses: joelwmale/webhook-action@master
