--- a/.env
+++ b/.env
@@ -2,11 +2,12 @@
 # base api
 VUE_APP_BASE_API = '/api/v1'
 VUE_APP_UPLOAD = '/upload'
+VUE_APP_OPEN_API = '/openapi'
 VUE_APP_ATOM_API = '/atom-webapi'
 
 # target host
 
-VUE_TARGET_HOST = 'http://192.168.2.126:8001'
+VUE_TARGET_HOST = 'http://192.168.2.178:8000'
 #VUE_TARGET_HOST = 'https://iast-test.huoxian.cn'
 #VUE_TARGET_HOST = 'http://iast.huoxian.cn'
 
