--- a/.github/workflows/deploy-web-to-release.yml
+++ b/.github/workflows/deploy-web-to-release.yml
@@ -1,10 +1,8 @@
 name: Deploy DongTai-Web to Release
 
 on:
-  push:
-    branches: [ "release-*" ]
-  pull_request:
-    branches: [ "release-*" ]
+  release:
+    types: [created]
 
 jobs:
   build:
