--- a/.github/workflows/deploy-web-to-release.yml
+++ b/.github/workflows/deploy-web-to-release.yml
@@ -67,8 +67,8 @@ jobs:
           GITHUB_TOKEN: ${{ github.token }}
         with:
           upload_url: ${{ steps.get_release.outputs.upload_url }}
-          asset_path: version.txt
-          asset_name: version.txt
+          asset_path: dist/version.txt
+          asset_name: dist/version.txt
           asset_content_type: text/plain
 
       - name: Build and push
