--- a/.github/workflows/deploy-web-to-release.yml
+++ b/.github/workflows/deploy-web-to-release.yml
@@ -1,8 +1,10 @@
 name: Deploy DongTai-Web to Release
 
 on:
-  release:
-    types: [created]
+  push:
+    branches: [ "release-*" ]
+  pull_request:
+    branches: [ "release-*" ]
 
 jobs:
   build:
@@ -53,27 +55,22 @@ jobs:
           VERSION=`echo ${GITHUB_REF##*/} | awk -F'-' '{print $2}'` \
           echo "::set-output name=version::$VERSION"
 
-      - name: Get release
-        id: get_release
-        uses: bruceadams/get-release@v1.2.2
-        env:
-          GITHUB_TOKEN: ${{ github.token }}
-
       - name: Generate version file
         run: |
           cd ${{ github.workspace }} && \
           echo "${{ github.event.repository.name }},version,${{ steps.release.outputs.version }}" >> dist/version.txt && \
           echo "${{ github.event.repository.name }},commit_hash,${GITHUB_SHA}" >> dist/version.txt \
 
-      - name: Upload version file
-        uses: actions/upload-release-asset@v1.0.2
-        env:
-          GITHUB_TOKEN: ${{ github.token }}
+      - name: Upload version file to oss
+        id: upload_version_file_to_oss
+        uses: tvrcgo/upload-to-oss@master
         with:
-          upload_url: ${{ steps.get_release.outputs.upload_url }}
-          asset_path: dist/version.txt
-          asset_name: dist/version.txt
-          asset_content_type: text/plain
+          key-id: ${{ secrets.OSS_KEY_ID }}
+          key-secret: ${{ secrets.OSS_KEY_SECRET }}
+          region: oss-cn-beijing
+          bucket: huoqi-public
+          assets: |
+            ./dist/version.txt:/iast/release-version/${{ github.event.repository.name }}/${{ steps.release.outputs.version }}/version.txt
 
       - name: Build and push
         uses: docker/build-push-action@v2
