--- a/.github/workflows/deploy-web-to-release.yml
+++ b/.github/workflows/deploy-web-to-release.yml
@@ -53,8 +53,7 @@ jobs:
 
       - id: release
         run: |
-          VERSION=`echo ${GITHUB_REF##*/} | awk -F'-' '{print $2}'` \
-          echo "::set-output name=version::$VERSION"
+          VERSION=`echo ${GITHUB_REF##*/} | awk -F'-' '{print $2}'` && echo "::set-output name=version::$VERSION"
 
       - name: Generate version file
         run: |
