--- a/.github/workflows/deploy-web-to-release.yml
+++ b/.github/workflows/deploy-web-to-release.yml
@@ -62,16 +62,31 @@ jobs:
           echo "${{ github.event.repository.name }},commit_hash,${GITHUB_SHA}" >> dist/version.txt && \
           cat dist/version.txt \
 
-      - name: Upload version file to oss
-        id: upload_version_file_to_oss
-        uses: tvrcgo/upload-to-oss@master
+      - name: Package
+        run: |
+          python setup.py sdist
+      - uses: manyuanrong/setup-ossutil@v2.0
         with:
-          key-id: ${{ secrets.OSS_KEY_ID }}
-          key-secret: ${{ secrets.OSS_KEY_SECRET }}
-          region: oss-cn-beijing
-          bucket: huoqi-public
-          assets: |
-            ./dist/version.txt:/iast/release-version/${{ github.event.repository.name }}/${{ steps.release.outputs.version }}/version.txt
+          endpoint: "oss-cn-beijing.aliyuncs.com"
+          access-key-id: ${{ secrets.OSS_KEY_ID }}
+          access-key-secret: ${{ secrets.OSS_KEY_SECRET }}
+
+      - name: Upload version file to oss
+        run: |
+          ossutil cp -rf dist/version.txt oss://huoqi-public/iast/release-version/${{ github.event.repository.name }}/${{ steps.release.outputs.version }}/version.txt
+
+      - name: Merge all version file
+        run: |
+          echo "DongTai,version,${{ steps.release.outputs.version }}" > dist/version.txt
+          ossutil cp oss://huoqi-public/iast/release-version/DongTai-web/${{ steps.release.outputs.version }}/version.txt DongTai-web.version.txt
+          ossutil cp oss://huoqi-public/iast/release-version/DongTai-webapi/${{ steps.release.outputs.version }}/version.txt DongTai-webapi.version.txt
+          ossutil cp oss://huoqi-public/iast/release-version/DongTai-openapi/${{ steps.release.outputs.version }}/version.txt DongTai-openapi.version.txt
+          ossutil cp oss://huoqi-public/iast/release-version/DongTai-engine/${{ steps.release.outputs.version }}/version.txt DongTai-engine.version.txt
+          ossutil cp oss://huoqi-public/iast/release-version/DongTai-agent-python/${{ steps.release.outputs.version }}/version.txt DongTai-agent-python.version.txt
+          ossutil cp oss://huoqi-public/iast/release-version/DongTai-agent-java/${{ steps.release.outputs.version }}/version.txt DongTai-agent-java.version.txt
+          ossutil cp oss://huoqi-public/iast/release-version/DongTai-agent-php/${{ steps.release.outputs.version }}/version.txt DongTai-agent-php.version.txt
+          cat *.version.txt >> dist/version.txt
+          cat dist/version.txt
 
       - name: Build and push
         uses: docker/build-push-action@v2
@@ -81,18 +96,18 @@ jobs:
           tags: |
             dongtai/dongtai-web:${{ steps.release.outputs.version }}
             dongtai/dongtai-web:latest
-
-      - name: Deploy-To-Prod
-        uses: wahyd4/kubectl-helm-action@master
-        env:
-          KUBE_CONFIG_DATA: ${{ secrets.KUBE_CONFIG_DATA }}
-        with:
-          args: |
-            find deploy/deploy-eks-iast-saas-web-prod.yml -type f -exec sed -i 's/VERSION/${{ steps.release.outputs.version }}/g' {} \;
-            ls deploy/deploy-eks-iast-saas-web-prod.yml | xargs -I {} kubectl apply -f {}
-
-      - name: finish build
-        uses: joelwmale/webhook-action@master
-        with:
-          url: ${{ secrets.WEBHOOK_URL }}
-          body: '{"msg_type": "interactive","card": {"config": {"wide_screen_mode": true,"enable_forward": true},"elements": [{"tag": "div","text": {"content": "状态：构建开始\n项目：${{github.repository}}\n分支：${{github.ref}}\n流程：${{github.workflow}}\n构建编号：${{github.run_number}}\n触发事件：${{github.event_name}}\n提交人：${{github.actor}}\nSHA-1：${{github.sha}}\n","tag": "lark_md"}}]}}'
+#
+#      - name: Deploy-To-Prod
+#        uses: wahyd4/kubectl-helm-action@master
+#        env:
+#          KUBE_CONFIG_DATA: ${{ secrets.KUBE_CONFIG_DATA }}
+#        with:
+#          args: |
+#            find deploy/deploy-eks-iast-saas-web-prod.yml -type f -exec sed -i 's/VERSION/${{ steps.release.outputs.version }}/g' {} \;
+#            ls deploy/deploy-eks-iast-saas-web-prod.yml | xargs -I {} kubectl apply -f {}
+#
+#      - name: finish build
+#        uses: joelwmale/webhook-action@master
+#        with:
+#          url: ${{ secrets.WEBHOOK_URL }}
+#          body: '{"msg_type": "interactive","card": {"config": {"wide_screen_mode": true,"enable_forward": true},"elements": [{"tag": "div","text": {"content": "状态：构建开始\n项目：${{github.repository}}\n分支：${{github.ref}}\n流程：${{github.workflow}}\n构建编号：${{github.run_number}}\n触发事件：${{github.event_name}}\n提交人：${{github.actor}}\nSHA-1：${{github.sha}}\n","tag": "lark_md"}}]}}'
