update:change php deploy

--- a/.env
+++ b/.env
@@ -7,8 +7,8 @@ VUE_APP_ATOM_API = '/atom-webapi'
 
 # target host
 
-# VUE_TARGET_HOST = 'http://192.168.2.181:8000'
-VUE_TARGET_HOST = 'https://iast-test.huoxian.cn'
+VUE_TARGET_HOST = 'http://192.168.2.181:8002'
+# VUE_TARGET_HOST = 'https://iast-test.huoxian.cn'
 # VUE_TARGET_HOST = 'http://52.81.92.214:30485'
 # VUE_TARGET_HOST = 'http://iast.huoxian.cn'
 
