--- a/deploy/deploy-eks-iast-saas-web-prod.yml
+++ b/deploy/deploy-eks-iast-saas-web-prod.yml
@@ -21,7 +21,11 @@ spec:
         - name: dongtai-web-container
           image: dongtai/dongtai-web:VERSION
           imagePullPolicy: Always
-
+          env:
+          - name: aliyun_logs_iast_server_project
+            value: k8s-log-c541e7d8ffff2434a8b7b4fd7d8645d2a
+          - name: aliyun_logs_iast_server
+            value: stdout
           resources:
             limits:
               cpu: "500m"
