--- a/.github/workflows/release-dongtai-web.yml
+++ b/.github/workflows/release-dongtai-web.yml
@@ -1,4 +1,4 @@
-name: Deploy DongTai-Web to Release
+name: Release Dongtai web
 
 on:
   release:
@@ -90,6 +90,34 @@ jobs:
           cat *.version.txt >> dist/version.txt
           cat dist/version.txt
 
+
+      - name: Build to local
+        uses: docker/build-push-action@v2
+        with:
+          context: .
+          load: true
+          tags: |
+            dongtai/dongtai-web:${{ steps.release.outputs.VERSION }}
+            dongtai/dongtai-web:latest
+            registry.cn-beijing.aliyuncs.com/huoxian_pub/dongtai-web:${{ steps.release.outputs.version }}
+            registry.cn-beijing.aliyuncs.com/huoxian_pub/dongtai-web:latest
+
+      - name: Save image to tar file
+        run: |
+          docker save dongtai/dongtai-web:${{ steps.release.outputs.version }} | gzip > /tmp/dongtai-web-${{ steps.release.outputs.version }}.tar.gz
+
+      - name: Setup Ossutil
+        uses: manyuanrong/setup-ossutil@v2.0
+        with:
+          endpoint: ${{ secrets.OSS_ENDPOINT }}
+          access-key-id: ${{ secrets.OSS_KEY_ID }}
+          access-key-secret: ${{ secrets.OSS_KEY_SECRET }}
+
+      - name: Upload images to oss
+        run: |
+          ossutil cp /tmp/dongtai-web-${{ steps.release.outputs.version }}.tar.gz oss://huoqi-public/iast/server-package/${{ steps.release.outputs.version }}/
+
+
       - name: Build and push
         uses: docker/build-push-action@v2
         with:
@@ -98,9 +126,10 @@ jobs:
           tags: |
             dongtai/dongtai-web:${{ steps.release.outputs.VERSION }}
             dongtai/dongtai-web:latest
+            registry.cn-beijing.aliyuncs.com/huoxian_pub/dongtai-web:${{ steps.release.outputs.version }}
+            registry.cn-beijing.aliyuncs.com/huoxian_pub/dongtai-web:latest
 
-
-      - name: Deploy-To-Prod
+      - name: Deploy to staging
         uses: wahyd4/kubectl-helm-action@master
         env:
           KUBE_CONFIG_DATA: ${{ secrets.KUBE_CONFIG_DATA }}
