fixed:vulnSummary==>vulnSummary_project;vulnSummary_type

--- a/.env
+++ b/.env
@@ -1,6 +1,7 @@
 
 # base api
 VUE_APP_BASE_API = '/api/v1'
+VUE_APP_BASE_API_V2 = '/api/v2'
 VUE_APP_UPLOAD = '/upload'
 VUE_APP_OPEN_API = '/openapi'
 VUE_APP_ATOM_API = '/atom-webapi'
