--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "vue-clipboard2": "^0.3.1",
     "vue-dompurify-html": "^2.3.0",
     "vue-i18n": "^8.22.2",
+    "vue-json-editor": "^1.4.3",
     "vue-property-decorator": "^8.4.2",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0",
