--- a/deploy/deploy-eks-iast-saas-web-test.yml
+++ b/deploy/deploy-eks-iast-saas-web-test.yml
@@ -21,7 +21,10 @@ spec:
         - name: dongtai-web-container
           image: registry.cn-beijing.aliyuncs.com/secnium/iast-saas-web-test:VERSION
           imagePullPolicy: Always
-
+          volumeMounts:
+            - name: configfile
+              mountPath: /etc/nginx/nginx.conf
+              subPath: nginx.conf
           resources:
             limits:
               cpu: "500m"
@@ -29,5 +32,9 @@ spec:
             requests:
               cpu: "500m"
               memory: 1000Mi
+      volumes:
+        - name: configfile
+          configMap:
+            name: dongtai-web-nginx-conf
       imagePullSecrets:
         - name: aliyun-registry-secret
