--- a/.env
+++ b/.env
@@ -8,9 +8,10 @@ VUE_APP_ATOM_API = '/atom-webapi'
 
 # target host
 
-VUE_TARGET_HOST = 'http://192.168.0.64:8000'
+# VUE_TARGET_HOST = 'http://192.168.0.64:8000'
 # VUE_TARGET_HOST = 'https://iast-test.huoxian.cn'
-# VUE_TARGET_HOST = 'http://52.81.92.214:30485'
+# dev地址 30158 账号：admin aeeqc6l
+VUE_TARGET_HOST = 'http://52.81.92.214:30485'
 # VUE_TARGET_HOST = 'http://iast.huoxian.cn'
 
 VUE_ATOM_TARGET_HOST = 'https://192.168.0.126'
