--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
     "element-ui": "^2.14.1",
     "js-base64": "^3.5.2",
     "markdown-it-xss": "^1.0.2",
-    "node-sass": "^5.0.0",
     "nprogress": "^0.2.0",
     "sortablejs": "^1.15.0",
     "view-design": "^4.6.1",
@@ -63,7 +62,8 @@
     "markdown-it-ruby": "^0.1.1",
     "markdown-it-table-of-contents": "^0.4.4",
     "prettier": "^2.2.1",
-    "sass-loader": "^10.1.0",
+    "sass": "^1.26.5",
+    "sass-loader": "^7.3.1",
     "typescript": "~3.9.3",
     "vue-template-compiler": "^2.6.11"
   }
