--- a/deploy/deploy-eks-iast-saas-web-test.yml
+++ b/deploy/deploy-eks-iast-saas-web-test.yml
@@ -7,6 +7,7 @@ metadata:
     kubesphere.io/description: dongtai前端项目
   labels:
     app: dongtai-web
+    version: v1
 spec:
   replicas: 1
   selector:
@@ -16,6 +17,7 @@ spec:
     metadata:
       labels:
         app: dongtai-web
+        version: v1
     spec:
       containers:
         - name: dongtai-web-container
