--- a/deploy/deploy-eks-iast-saas-web-test.yml
+++ b/deploy/deploy-eks-iast-saas-web-test.yml
@@ -15,6 +15,8 @@ spec:
       app: dongtai-web
   template:
     metadata:
+      annotations:
+        sidecar.istio.io/inject: "true"
       labels:
         app: dongtai-web
         version: v1
