--- a/.github/workflows/deploy-to-test.yml
+++ b/.github/workflows/deploy-to-test.yml
@@ -50,7 +50,7 @@ jobs:
           context: .
           push: true
           tags: |
-            dongtai/dongtai-web-test:${{github.run_number}}
+            dongtai/dongtai-web-test:1.0.${{github.run_number}}
             dongtai/dongtai-web-test:latest
 
       - uses: actions/checkout@master
