--- a/.github/workflows/release-dongtai-web.yml
+++ b/.github/workflows/release-dongtai-web.yml
@@ -37,12 +37,12 @@ jobs:
           username: ${{ secrets.DONGTAI_DOCKERHUB_USERNAME }}
           password: ${{ secrets.DONGTAI_DOCKERHUB_TOKEN }}
 
-      - name: Login to AliyunRegistry
-        uses: docker/login-action@v1
-        with:
-          registry: ${{ secrets.ALIYUN_REGISTRY }}
-          username: ${{ secrets.ALIYUN_DOCKERHUB_USER }}
-          password: ${{ secrets.ALIYUN_DOCKERHUB_PASSWORD }}
+      # - name: Login to AliyunRegistry
+      #   uses: docker/login-action@v1
+      #   with:
+      #     registry: ${{ secrets.ALIYUN_REGISTRY }}
+      #     username: ${{ secrets.ALIYUN_DOCKERHUB_USER }}
+      #     password: ${{ secrets.ALIYUN_DOCKERHUB_PASSWORD }}
 
       - name: test and build
         run: |
