--- a/.github/workflows/deploy-to-dev.yml
+++ b/.github/workflows/deploy-to-dev.yml
@@ -2,9 +2,9 @@ name: Deploy DongTai-Web to AWS
 
 on:
   pull_request:
-    branches: [ "cdz" ]
+    branches: [ "guoshun" ]
   push:
-    branches: [ "cdz" ]
+    branches: [ "guoshun" ]
 jobs:
   Deploy-To-Dev:
     if: github.event_name == 'push'
@@ -26,18 +26,17 @@ jobs:
       - name: setup nodejs
         uses: actions/setup-node@v1
       
-#       - name: Set up QEMU
-#         uses: docker/setup-qemu-action@v1
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v1
 
-#       - name: Set up Docker Buildx
-#         uses: docker/setup-buildx-action@v1
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
 
-#       - name: Login to DockerHub
-#         uses: docker/login-action@v1
-#         with:
-#           registry: ${{ secrets.ALIYUN_REGISTRY }}
-#           username: ${{ secrets.ALIYUN_DOCKERHUB_USER }}
-#           password: ${{ secrets.ALIYUN_DOCKERHUB_PASSWORD }}
+      - name: Login to DockerHub
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DONGTAI_DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DONGTAI_DOCKERHUB_TOKEN }}
       
       - name: Test and build
         run: |
@@ -45,14 +44,14 @@ jobs:
           npm test
           npm run build --if-present
 
-#       - name: Build and push
-#         uses: docker/build-push-action@v2
-#         with:
-#           context: .
-#           push: true
-#           tags: |
-#             registry.cn-beijing.aliyuncs.com/secnium/iast-saas-web-dev:latest
-#             registry.cn-beijing.aliyuncs.com/secnium/iast-saas-web-dev:1.0.${{github.run_number}}
+      - name: Build and push
+        uses: docker/build-push-action@v2
+        with:
+          context: .
+          push: true
+          tags: |
+            dongtai/dongtai-web-guoshun:1.4.0
+            dongtai/dongtai-web-guoshun:latest
 
 #       - uses: actions/checkout@master
 #       - name: deploy to cluster
